<resources>
    <string name="app_name">App</string>

    <!---  LOGIN   -->
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgotPassword">Forgot the password?</string>
    <string name="rememberMe">Remember me</string>
    <string name="signIn">Sign In</string>
    <string name="quitSmoking">Do you want to quit smoking?</string>
    <string name="newUser">New user?</string>
    <string name="register">Register</string>
    <string name="terminosCondiciones"><u>Términos y condiciones de uso</u></string>

    <!--- Términos y condiciones   -->
    <string name="tituloTerminosCondiciones">Términos y condiciones</string>
    <string name="textoTerminosCondiciones">Es requisito necesario para la adquisición de los productos que se ofrecen en este sitio, que lea y acepte los siguientes Términos y Condiciones que a continuación se redactan. El uso de nuestros servicios así como la compra de nuestros productos implicará que usted ha leído y aceptado los Términos y Condiciones de Uso en el presente documento. Todas los productos  que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por una página web tercera y en tal caso estarían sujetas a sus propios Términos y Condiciones. En algunos casos, para adquirir un producto, será necesario el registro por parte del usuario, con ingreso de datos personales fidedignos y definición de una contraseña.

El usuario puede elegir y cambiar la clave para su acceso de administración de la cuenta en cualquier momento, en caso de que se haya registrado y que sea necesario para la compra de alguno de nuestros productos.  no asume la responsabilidad en caso de que entregue dicha clave a terceros.

Todas las compras y transacciones que se lleven a cabo por medio de este sitio web, están sujetas a un proceso de confirmación y verificación, el cual podría incluir la verificación del stock y disponibilidad de producto, validación de la forma de pago, validación de la factura (en caso de existir) y el cumplimiento de las condiciones requeridas por el medio de pago seleccionado. En algunos casos puede que se requiera una verificación por medio de correo electrónico.

Los precios de los productos ofrecidos en esta Tienda Online es válido solamente en las compras realizadas en este sitio web.</string>

    <string name="terminosCondicionesCorreo">Este  garantiza que la información personal que usted envía cuenta con la seguridad necesaria. Los datos ingresados por usuario o en el caso de requerir una validación de los pedidos no serán entregados a terceros, salvo que deba ser revelada en cumplimiento a una orden judicial o requerimientos legales.

    La suscripción a boletines de correos electrónicos publicitarios es voluntaria y podría ser seleccionada al momento de crear su cuenta.</string>

    <string name="terminosCondicionestituloPrivacidad">PRIVACIDAD</string>




    <!--- REGISTER Strings   -->
    <string name="registerPage">Register</string>

    <string name="registerPageUsername">Username</string>
    <string name="registerPageName">Name</string>
    <string name="registerPageSurname">Surname</string>
    <string name="registerPageEmail">Email</string>
    <string name="registerPagePassword">Password</string>
    <string name="buttonRegister">Registrarse</string>

    <!--- Activity choose liar/industrial   -->
    <string name="tabacoDeLiar">TABACO DE LIAR</string>
    <string name="tabacoIndustrial">TABACO INDUSTRIAL</string>

    <string name="fotoTabacoDeLiar"></string>
    <string name="fotoTabacoIndustrial"></string>


    <!--- Activity choose tabaco   -->
    <string name="tituloQueTabacoEscoger">What tobacco do you smoke?</string>

    <string name="lm">L&amp;M</string>


</resources>